apps/jellyseerr/kustomization/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: media-video
  labels:
    gateway-access: private
