apps/jellyseerr/kustomization/httproute-private.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyseerr-private
spec:
  parentRefs:
  - name: private
    namespace: traefik
    sectionName: websecure-demandeur
  hostnames:
  - demandeur.yiannis.io
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: ExtensionRef
      extensionRef:
        group: traefik.io
        kind: Middleware
        name: authentik
    backendRefs:
    - name: jellyseerr
      port: 5055
