apps/jellyseerr/kustomization/cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: jellyseerr-ingress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: jellyseerr
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: traefik
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: homepage
        app.kubernetes.io/name: homepage
    toPorts:
    - ports:
      - port: "5055"
        protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: jellyseerr-egress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: jellyseerr
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
      rules:
        dns:
        - matchPattern: "*"
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: media-video
        app.kubernetes.io/name: jellyfin
    toPorts:
    - ports:
      - port: "8096"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: media-video
        app.kubernetes.io/name: radarr
    toPorts:
    - ports:
      - port: "7878"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: media-video
        app.kubernetes.io/name: sonarr
    toPorts:
    - ports:
      - port: "8989"
        protocol: TCP
  - toFQDNs:
    - matchName: 79frdp12pn-dsn.algolia.net
    - matchName: api.github.com
    - matchName: api.themoviedb.org
    - matchName: image.tmdb.org
    - matchName: omdbapi.com
    - matchName: www.omdbapi.com
    - matchName: imdb.com
    - matchName: www.imdb.com
    - matchName: m.media-amazon.com
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      - port: "443"
        protocol: TCP
